--- a/src/main/resources/templates/attendanceList.html
+++ b/src/main/resources/templates/attendanceList.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>出勤ボタンページ</title>
-    <mata charste="utf-8">
+    <meta charste="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE-edge">
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <!--<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />-->
