--- a/src/main/resources/templates/contactAddress.html
+++ b/src/main/resources/templates/contactAddress.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>勤怠履歴</title>
-    <mata charste="utf-8">
+    <meta charste="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE-edge">
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
         <!--<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />-->
