--- a/src/main/resources/templates/JokyomanageList.html
+++ b/src/main/resources/templates/JokyomanageList.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <div style="text-align: center">
-    <h1>打刻履歴</h1>
+    <h1>打刻履歴 管理</h1>
     <h1>
         <div id="current_date"></div>
         <script>
@@ -42,7 +42,6 @@
         <th>合計労働時間</th>
     </tr>
     <th:block th:each="attendance : ${attendances}">
-        <tr th:if="${attendance.id == desiredId}">
             <td th:text="${attendance.id}"></td>
             <td th:text="${attendance.date}"></td>
             <td th:text="${attendance.start}"></td>
@@ -55,7 +54,6 @@
 </table>
 <a href="attendanceList">戻ろう</a>
 <script>
-    var desiredId = /* ログインしたユーザーのID */;
     function totalTime(start, end) {
         if (!end) {
             return 0;
