--- a/src/main/resources/templates/jokyoList.html
+++ b/src/main/resources/templates/jokyoList.html
@@ -49,22 +49,32 @@
             <td th:text="${attendance.end}"></td>
             <td th:text="${attendance.break_start}"></td>
             <td th:text="${attendance.break_end}"></td>
-            <td th:text="${totalTime(attendance.start, attendance.end)}"></td>
+            <td th:text="${totalTime(attendance.start, attendance.end, attendance.break_start, attendance.break_end)}"></td>
         </tr>
     </th:block>
 </table>
 <a href="attendanceList">戻ろう</a>
 <script>
-    var desiredId = /* ログインしたユーザーのID */;
-    function totalTime(start, end) {
+    var desiredId = /* ログインしたユーザーのID(セッションがないから選択されたユーザー） */;
+    function totalTime(start, end, breakStart, breakEnd) {
         if (!end) {
             return 0;
         }
-        const startObj = new Date(`1970-01-01 ${start}`);
-        const endObj = new Date(`1970-01-01 ${end}`);
-        let diffInHours = (endObj - startObj) / (1000 * 60 * 60);
+        const start = new Date(`1970-01-01 ${start}`);
+        const end = new Date(`1970-01-01 ${end}`);
+        const breakStart = new Date(`1970-01-01 ${breakStart}`);
+        const breakEnd = new Date(`1970-01-01 ${breakEnd}`);
 
-        return diffInHours >= 7 ? diffInHours - 1 : diffInHours;
+        const workMinutes = (end - start) / (1000 * 60);
+        const breakMinutes = (breakEnd - breakStart) / (1000 * 60);
+
+        let totalMinutes = workMinutes - breakMinutes;
+
+        if (breakMinutes >= 7 * 60) {
+        totalMinutes -= 60;
+        }
+
+        return totalMinutes;
     }
 </script>
 </body>
