--- a/src/main/resources/templates/attendanceList.html
+++ b/src/main/resources/templates/attendanceList.html
@@ -39,7 +39,7 @@
 <!--
 <p th:text="|Hello, ${name}!|" />
 -->
-    <h1>中塚くんが、出勤できるように頑張って作ってる出勤ボタンページ 勤怠くん</h1>
+    <h1>勤怠管理「AttendanceManage」</h1>
     <h2 id="realtime">時刻未取得</h2>
 
 <dialog>
