--- a/src/main/resources/templates/jokyoList.html
+++ b/src/main/resources/templates/jokyoList.html
@@ -55,7 +55,7 @@
 </table>
 <a href="attendanceList">戻ろう</a>
 <script>
-    var desiredId = /* ログインしたユーザーのID(セッション内から選択されたユーザー） */;
+    var desiredId = 0001;
     function totalTime(start, end, breakStart, breakEnd) {
         if (!end) {
             return 0;
