--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -2,21 +2,25 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>ログインページ</title>
-    <meta charste="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE-edge">
-        <meta name="viewport" content="width=device-width,initial-scale=1.0">
-        <!--<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />-->
-        <link rel="stylesheet" href="/style.css" type="text/css">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE-edge">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <!--<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />-->
+    <link rel="stylesheet" href="/style.css" type="text/css">
 </head>
 <body>
 <h1>ログインできないログインページ</h1>
 <h4>ログインID</h4>
 <input type="text" id="id">
 <h4>パスワード</h4>
-<input type="text" id="password">
+<input type="password" id="password">
+<p>
+<select name="User">
+    <option value="user">一般</option>
+    <option value="manage">管理</option>
+</select>
+</p>
 <p>
     <a href="attendanceList">ログイン</a>
-</body>
-</html>
 </body>
 </html>
