セッション管理のサンプルを修正

--- a/src/main/resources/templates/sample01.html
+++ b/src/main/resources/templates/sample01.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" lang="ja">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
 <body>
 <form method="post" action="/sample01">
-    <input type="text" name="userId" value="" />
+    <select name="userId">
+        <option value="5">5</option>
+    </select>
+    <input type="text" name="userName" value="" />
     <input type="submit" />
 </form>
 
