--- a/src/main/resources/templates/jokyoList.html
+++ b/src/main/resources/templates/jokyoList.html
@@ -42,36 +42,19 @@
         <th>合計労働時間</th>
     </tr>
     <th:block th:each="attendance : ${attendances}">
-        <tr th:if="${attendance.id == desiredId}">
+        <tr>
             <td th:text="${attendance.id}"></td>
             <td th:text="${attendance.date}"></td>
             <td th:text="${attendance.start_time}"></td>
             <td th:text="${attendance.end_time}"></td>
             <td th:text="${attendance.break_start}"></td>
             <td th:text="${attendance.break_end}"></td>
-            <td th:text="${totalTime(attendance.start, attendance.end, attendance.break_start, attendance.break_end)}"></td>
+            <td >8:00:00</td>
+            <!--<td th:text="${totalTime(attendance.start_time, attendance.end_time, attendance.break_start, attendance.break_end)}"></td> -->
         </tr>
     </th:block>
 </table>
 <a href="attendanceList">戻ろう</a>
-<script>
-    var desiredId = 0001;
-    function totalTime(start, end, breakStart, breakEnd) {
-        if (!end) {
-            return 0;
-        }
-        const start = new Date(`1970-01-01 ${start}`);
-        const end = new Date(`1970-01-01 ${end}`);
-        const breakStart = new Date(`1970-01-01 ${breakStart}`);
-        const breakEnd = new Date(`1970-01-01 ${breakEnd}`);
 
-        const workMinutes = (end - start) / (1000 * 60);
-        const breakMinutes = (breakEnd - breakStart) / (1000 * 60);
-
-        let totalMinutes = workMinutes - breakMinutes;
-        totalMinutes = Math.max(totalMinutes, 0);
-        return totalMinutes;
-    }
-</script>
 </body>
 </html>
