--- a/src/main/resources/templates/User.html
+++ b/src/main/resources/templates/User.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org未登録">
+<html lang="ja" xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,7 +9,7 @@
 <h1>新規ユーザー作成</h1>
 
 <form action="/admin/addUser" method="post">
-  <label for="名前">　　　　　名前:</label>
+  <label for="名前">名前:</label>
   <input type="text" id="名前" name="名前" required>
   <br>
   <label for="ユーザーネーム">ユーザーネーム:</label>
