--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-[html lang="ja" xmlns:th="http://www.thymeleaf.org">
-<head xmlns:th="http://www.w3.org/1999/xhtml">
+<html lang="ja" xmlns:th="http://www.thymeleaf.org">
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>管理画面</title>
@@ -11,7 +11,7 @@
 <h2>ユーザー一覧</h2>
 <ul>
     <li th:each="user : ${users}">
-        <span th:text="${user.fullName}"></span> - <span th:text="${user.attendance}"></span>
+        <span th:text="${user.name}"></span> - <span th:text="${user.email}"></span>
     </li>
 </ul>
 
