--- a/src/main/resources/templates/jokyoList.html
+++ b/src/main/resources/templates/jokyoList.html
@@ -12,7 +12,7 @@
     <h1>
         <div id="current_date"></div>
         <script>
-            function updateCurrentDateTime() {
+function updateCurrentDateTime() {
                 const currentDateElement = document.getElementById("current_date");
                 const now = new Date();
                 const year = now.getFullYear();
@@ -44,7 +44,7 @@
     <th:block th:each="attendance : ${attendances}">
         <tr>
             <td th:text="${attendance.id}"></td>
-            <td th:text="${attendance.date}"></td>
+            <td th:text="${#dates.format(attendance.date, 'yyyy/MM/dd')}"></td>
             <td th:text="${attendance.start_time}"></td>
             <td th:text="${attendance.end_time}"></td>
             <td th:text="${attendance.break_start}"></td>
