--- a/src/main/resources/templates/attendanceList.html
+++ b/src/main/resources/templates/attendanceList.html
@@ -6,48 +6,48 @@
     <mata charste="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE-edge">
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
-        <link rel="stylesheet" href="/style.css" type="text/css"></mata>
+        <link rel="stylesheet" href="/style.css" type="text/css">
+    </mata>
 
+    <script>
+        function twoDigit(num) {
+            let ret;
+            if( num < 10 )
+            ret = "0" + num;
+            else
+            ret = num;
+            return ret;
+        }
+        function showClock() {
+            let nowTime = new Date();
+            let nowHour = twoDigit( nowTime.getHours() );
+            let nowMin  = twoDigit( nowTime.getMinutes() );
+            let nowSec  = twoDigit( nowTime.getSeconds() );
+            let msg2 = nowHour + ":" + nowMin + ":" + nowSec;
+            document.getElementById("realtime").innerHTML = msg2;
+        }
+        setInterval('showClock()',1000);
 
-            <script>
-                function twoDigit(num) {
-                    let ret;
-                    if( num < 10 )
-                    ret = "0" + num;
-                    else
-                    ret = num;
-                    return ret;
-                }
-                function showClock() {
-                    let nowTime = new Date();
-                    let nowHour = twoDigit( nowTime.getHours() );
-                    let nowMin  = twoDigit( nowTime.getMinutes() );
-                    let nowSec  = twoDigit( nowTime.getSeconds() );
-                    let msg2 = nowHour + ":" + nowMin + ":" + nowSec;
-                    document.getElementById("realtime").innerHTML = msg2;
-                }
-                setInterval('showClock()',1000);
-
-                function start() {
-                    let form = document.getElementById('startform');
-                    form.submit();
-                    alert(document.getElementById("realtime").innerHTML + "に出勤しました");
-                }
-                function end() {
-                    let form = document.getElementById('endform');
-                    form.submit();
-                    alert(document.getElementById("realtime").innerHTML + "に退勤しました");
-                }
-                function breakstart() {
-                    let form = document.getElementById('breakstart');
-                    form.submit();
-                    alert(document.getElementById("realtime").innerHTML + "に休憩開始しました");
-                }
-                function breakend() {
-                    let form = document.getElementById('breakend');
-                    form.submit();
-                    alert(document.getElementById("realtime").innerHTML + "に休憩終了しました");
-                }
+        function start() {
+            let form = document.getElementById('startform');
+            form.submit();
+            alert(document.getElementById("realtime").innerHTML + "に出勤しました");
+        }
+        function end() {
+            let form = document.getElementById('endform');
+            form.submit();
+            alert(document.getElementById("realtime").innerHTML + "に退勤しました");
+        }
+        function breakstart() {
+            let form = document.getElementById('breakstart');
+            form.submit();
+            alert(document.getElementById("realtime").innerHTML + "に休憩開始しました");
+        }
+        function breakend() {
+            let form = document.getElementById('breakend');
+            form.submit();
+            alert(document.getElementById("realtime").innerHTML + "に休憩終了しました");
+        }
     </script>
 </head>
 
@@ -56,13 +56,15 @@
     <h3>株式会社 ヒューマンアカデミー</h3>
     <dialog>
         <div style="text-align: right;">
-            <button id="close">閉じる</button></div>
+            <button id="close">閉じる</button>
+        </div>
         <a href="jokyoList">勤怠状況一覧表示</a>
         <a href="login">ログアウト</a>
-        </div>
     </dialog>
     <!-- モーダルウィンドウ内を開くボタンの指定 -->
-    <div style="text-align: right;"><button id="open">⊟</button></div>
+    <div style="text-align: right;">
+        <button id="open">⊟</button>
+    </div>
 
     <script>
         let dialog = document.querySelector('dialog'); // dialog（モーダルダイアログ）の宣言
@@ -78,93 +80,98 @@
         }, false);
     </script>
 
-    <div style="text-align: center;"><h2>こんにちは,今日も頑張って下さい</h2>
+    <div style="text-align: center;">
+        <h2>こんにちは！今日も頑張って下さい！</h2>
         <div style=”line-height: 1;”>
             <p span id="view_time">日付取得中</span></p>
             <p id="realtime">時刻取得中…</p>
         </div>
         <script type="text/javascript">
             document.getElementById("view_time").innerHTML = getNow();
-
             function getNow() {
                 var now = new Date();
                 var year = now.getFullYear();
-                var mon = now.getMonth()+1; //１を足すこと
+                var mon = now.getMonth()+1;
                 var day = now.getDate();
 
                 //出力用
-                var s = year + "年" + mon + "月" + day + "日";
-                return s;
+                var date = year + "年" + mon + "月" + day + "日";
+                return date;
             }
         </script>
-
-
     </div>
-    <div style="text-align: center;">
-        <table>
+    
+    <table style="margin:auto">
         <tr>
-            <th><form id="startform" method="post" action="/attendanceInput">
-                <button type="button" class="start_time" name="start_time" value="realtime" onclick="start()">　出勤　</button><br>
-                <select name="userId" class="name_pd1">
-                    <option value="1">ユーザー1</option>
-                    <option value="2">ユーザー2</option>
-                    <option value="3">ユーザー3</option>
-                    <option value="4">ユーザー4</option>
-                    <option value="5">ユーザー5</option>
-                    <option value="6">ユーザー6</option>
-                    <option value="7">ユーザー7</option>
-                    <option value="8">ユーザー8</option>
-                    <option value="9">ユーザー9</option>
-                    <option value="10">ユーザー10</option>
-                </select>
-            </form></th>
-            <th><form id="endform" method="post" action="/attendanceEnd">
-                <button type="button" class="end_time" name="end_time" value="realtime" onclick="end()">　退勤　</button><br>
-                <select name="userId">
-                    <option value="1">ユーザー1</option>
-                    <option value="2">ユーザー2</option>
-                    <option value="3">ユーザー3</option>
-                    <option value="4">ユーザー4</option>
-                    <option value="5">ユーザー5</option>
-                    <option value="6">ユーザー6</option>
-                    <option value="7">ユーザー7</option>
-                    <option value="8">ユーザー8</option>
-                    <option value="9">ユーザー9</option>
-                    <option value="10">ユーザー10</option>
-                </select>
-            </form></th>
-            <th><form id="breakstart" method="post" action="/attendanceBreakStart">
-                <button type="button" class="break_start" name="break_start" value="realtime" onclick="breakstart()">休憩開始</button><br>
-                <select name="userId">
-                    <option value="1">ユーザー1</option>
-                    <option value="2">ユーザー2</option>
-                    <option value="3">ユーザー3</option>
-                    <option value="4">ユーザー4</option>
-                    <option value="5">ユーザー5</option>
-                    <option value="6">ユーザー6</option>
-                    <option value="7">ユーザー7</option>
-                    <option value="8">ユーザー8</option>
-                    <option value="9">ユーザー9</option>
-                    <option value="10">ユーザー10</option>
-                </select>
-            </form></th>
-            <th><form id="breakend" method="post" action="/attendanceBreakEnd">
-                <button type="button" class="break_end" name="break_end" value="realtime" onclick="breakend()">休憩終了</button><br>
-                <select name="userId">
-                    <option value="1">ユーザー1</option>
-                    <option value="2">ユーザー2</option>
-                    <option value="3">ユーザー3</option>
-                    <option value="4">ユーザー4</option>
-                    <option value="5">ユーザー5</option>
-                    <option value="6">ユーザー6</option>
-                    <option value="7">ユーザー7</option>
-                    <option value="8">ユーザー8</option>
-                    <option value="9">ユーザー9</option>
-                    <option value="10">ユーザー10</option>
-                </select>
-            </form></th>
+            <th>
+                <form id="startform" method="post" action="/attendanceInput">
+                    <button type="button" class="start_time" name="start_time" value="realtime" onclick="start()">　出勤　</button><br>
+                    <select name="userId" class="name_pd1">
+                        <option value="1">ユーザー1</option>
+                        <option value="2">ユーザー2</option>
+                        <option value="3">ユーザー3</option>
+                        <option value="4">ユーザー4</option>
+                        <option value="5">ユーザー5</option>
+                        <option value="6">ユーザー6</option>
+                        <option value="7">ユーザー7</option>
+                        <option value="8">ユーザー8</option>
+                        <option value="9">ユーザー9</option>
+                        <option value="10">ユーザー10</option>
+                    </select>
+                </form>
+            </th>
+            <th>
+                <form id="endform" method="post" action="/attendanceEnd">
+                    <button type="button" class="end_time" name="end_time" value="realtime" onclick="end()">　退勤　</button><br>
+                    <select name="userId">
+                        <option value="1">ユーザー1</option>
+                        <option value="2">ユーザー2</option>
+                        <option value="3">ユーザー3</option>
+                        <option value="4">ユーザー4</option>
+                        <option value="5">ユーザー5</option>
+                        <option value="6">ユーザー6</option>
+                        <option value="7">ユーザー7</option>
+                        <option value="8">ユーザー8</option>
+                        <option value="9">ユーザー9</option>
+                        <option value="10">ユーザー10</option>
+                    </select>
+                </form>
+            </th>
+            <th>
+                <form id="breakstart" method="post" action="/attendanceBreakStart">
+                    <button type="button" class="break_start" name="break_start" value="realtime" onclick="breakstart()">休憩開始</button><br>
+                    <select name="userId">
+                        <option value="1">ユーザー1</option>
+                        <option value="2">ユーザー2</option>
+                        <option value="3">ユーザー3</option>
+                        <option value="4">ユーザー4</option>
+                        <option value="5">ユーザー5</option>
+                        <option value="6">ユーザー6</option>
+                        <option value="7">ユーザー7</option>
+                        <option value="8">ユーザー8</option>
+                        <option value="9">ユーザー9</option>
+                        <option value="10">ユーザー10</option>
+                    </select>
+                </form>
+            </th>
+            <th>
+                <form id="breakend" method="post" action="/attendanceBreakEnd">
+                    <button type="button" class="break_end" name="break_end" value="realtime" onclick="breakend()">休憩終了</button><br>
+                    <select name="userId">
+                        <option value="1">ユーザー1</option>
+                        <option value="2">ユーザー2</option>
+                        <option value="3">ユーザー3</option>
+                        <option value="4">ユーザー4</option>
+                        <option value="5">ユーザー5</option>
+                        <option value="6">ユーザー6</option>
+                        <option value="7">ユーザー7</option>
+                        <option value="8">ユーザー8</option>
+                        <option value="9">ユーザー9</option>
+                        <option value="10">ユーザー10</option>
+                    </select>
+                </form>
+            </th>
         </tr>
     </table>
-    </div>
 </body>
 </html>
