--- a/src/main/resources/templates/attendanceList.html
+++ b/src/main/resources/templates/attendanceList.html
@@ -55,11 +55,26 @@
     <h1>勤怠管理「AttendanceManage」</h1>
     <h3>株式会社 ヒューマンアカデミー</h3>
     <dialog>
-        <div style="text-align: right;">
-            <button id="close">閉じる</button>
-        </div>
-        <a href="jokyoList">勤怠状況一覧表示</a>
-        <a href="login">ログアウト</a>
+        <table>
+            <tr>
+                <th>
+                    <h4>メニュー</h4>
+                </th>
+                <th>
+                    <div style="text-align: right;">
+                        <button id="close">閉じる</button>
+                    </div>
+                </th>
+            </tr>
+            <th>
+                <td>
+                    <a href="jokyoList">勤怠状況一覧表示</a>
+                </td>
+                <td>
+                    <a href="login">ログアウト</a>
+                </td>
+            </th>
+        </table>
     </dialog>
     <!-- モーダルウィンドウ内を開くボタンの指定 -->
     <div style="text-align: right;">
