--- a/src/main/resources/templates/attendanceList.html
+++ b/src/main/resources/templates/attendanceList.html
@@ -55,30 +55,34 @@
     <h1>勤怠管理「AttendanceManage」</h1>
     <h3>株式会社 ヒューマンアカデミー</h3>
     <dialog>
-        <table>
+        <table height="150">
             <tr>
                 <th>
                     <h4>メニュー</h4>
                 </th>
+            </tr>
+            <tr>
                 <th>
-                    <div style="text-align: right;">
-                        <button id="close">閉じる</button>
-                    </div>
+                    <a href="jokyoList" class="modalclick">勤怠状況一覧表示</a>
                 </th>
             </tr>
-            <th>
+            <tr>
+                <th>
+                    <a href="login" class="modalclick">ログアウト</a>
+                </th>
+            </tr>
+            <tr>
                 <td>
-                    <a href="jokyoList">勤怠状況一覧表示</a>
+                    <div style="text-align: center;">
+                        <button id="close" class="close"> 閉じる</button>
+                    </div>
                 </td>
-                <td>
-                    <a href="login">ログアウト</a>
-                </td>
-            </th>
+            </tr>
         </table>
     </dialog>
     <!-- モーダルウィンドウ内を開くボタンの指定 -->
     <div style="text-align: right;">
-        <button id="open">⊟</button>
+        <button id="open" class="open">メニュー</button>
     </div>
 
     <script>
