--- a/src/main/resources/templates/jokyoList.html
+++ b/src/main/resources/templates/jokyoList.html
@@ -54,7 +54,9 @@
         </tr>
     </th:block>
 </table>
-<a href="attendanceList">戻ろう</a>
-
+<div style="text-align: center;">
+    <br>
+    <a href="attendanceList" class="click">戻る</a>
+</div>
 </body>
 </html>
